--- a/Styles.css
+++ b/Styles.css
@@ -17,3 +17,83 @@ body {
     position: relative;
     color: #ffffff;
 }
+
+/* === Верхня панель === */
+.header-content {
+    position: absolute;
+    top: 20px;
+    left: 376.92px;
+    right: 340px;
+    display: flex;
+    align-items: center;
+}
+
+/* === Лого === */
+.logo-container {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    width: 50px;
+    height: auto;
+}
+
+.brand-name {
+    font-size: 24px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-left: 8px;
+    position: relative;
+    top: 15px;
+}
+
+/* === Меню === */
+.nav-menu {
+    margin-left: 180px;
+    position: relative;
+    top: 15px;
+    white-space: nowrap;
+}
+
+.nav-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 7px;
+}
+
+.nav-menu a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 12px;
+    transition: color 0.3s;
+    padding: 0 10px;
+}
+
+.nav-menu a:hover {
+    color: #c7a46c;
+}
+
+/* === Іконки справа === */
+.icons {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    position: relative;
+    top: 15px;
+}
+
+.icon {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+    transition: opacity 0.3s;
+}
+
+.icon:hover {
+    opacity: 0.7;
+}
